# astxx

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile~  README.md
examples/: manager.cpp  queue-event-test.cpp
include/: agi.h  manager.h
include/astxx/: agi.h  exception.h
include/astxx/manager/: basic_action.h  connection.h  error.h  message.h
include/astxx/manager/action/: absolute_timeout.h  error.h  extension_state.h  login.h  logoff.h  mailbox_count.h  mailbox_status.h  originate.h  ping.h  redirect.h  setvar.h  status.h  user_event.h
include/manager/: basic_action.h  connection.h  error.h  message.h
include/manager/action/: absolute_timeout.h  command.h  error.h  events.h  extension_state.h  getvar.h  hangup.h  list_commands.h  login.h  logoff.h  mailbox_count.h  mailbox_status.h  originate.h  ping.h  queue_pause.h  queue_status.h  redirect.h  setvar.h  status.h  user_event.h
src/: agi.cc  agi.cpp  basic_action.cpp  connection.cpp  error.cpp
src/manager/: basic_action.cc  connection.cc  error.cc
